fixed margin left on buttons which caused all the game area not to be aligned in center properly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,7 +108,7 @@ a {
   width: fit-content;
   word-break: break-word;
   border: 0;
-  /* margin-left: -15px; */
+  margin-left: -85px;
 }
 
 
